# taaminalu

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
.claude/skills/implement/: SKILL.md
.claude/skills/research-similar-impl/: SKILL.md  references.md  report-template.md
.claude/skills/review/: SKILL.md
.claude/skills/tdd-green/: SKILL.md
.claude/skills/tdd-red/: SKILL.md
.claude/skills/tdd-refactor/: SKILL.md
src/: app.rs  input.rs  main.rs  pty.rs  render.rs  tab.rs  term.rs  tsf.rs  window.rs
